S8 fixes, perk text fixes, make perk ids only show on shiftdown

--- a/stylesheets/theme-S8.css
+++ b/stylesheets/theme-S8.css
@@ -31,6 +31,14 @@ body {
     color: black !important;
 }
 
+.autoBuyerDiv {
+    border-color: black;
+}
+
+.glyphDescriptions {
+    border-color: black;
+}
+
 /*metro  theme with less box shadows*/
 
 * {
